
import "ClassType.proto";

package proto;

option java_package = "com.lvl6.aoc2.noneventprotos";
option java_outer_classname = "FullUser";

message FullUserProto {
	optional string userID = 1;
	optional int32 level = 2;
	optional string name = 3;
	optional int32 exp = 4;
	optional int32 gold = 5;
	optional int32 tonic = 6;
	optional int32 gems = 7;
	required ClassType classType = 8;
	optional int32 lastHealth = 9;
	optional int32 maxHealth = 10;
	optional int64 lastHealthRegen = 11;
	optional int32 lastMana = 12;
	optional int32 maxMana = 13;
	optional int64 lastManaRecovery = 14;
	optional string gameCenterID = 15;
	optional int64 dateCreated = 16;
	optional string clanID = 17;
}

message MinimumUserProto {
	optional string userID = 1;
	optional string gameCenterId = 2;
	optional string udid = 3;
	optional string name = 4;
}