//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "MonsterStuff.proto";

package proto;

option java_package = "com.lvl6.mobsters.noneventprotos";
option java_outer_classname = "TaskProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message TaskStageProto {
	optional string stageUuid = 1;
	repeated TaskStageMonsterProto stageMonsters = 2;
}

//------------------------------------------------------------------------------------------

message FullTaskProto {
	optional string taskUuid = 1;
	optional string name = 2;
	optional string description = 3;
	optional string cityUuid = 4;
	optional int32 assetNumWithinCity = 5;
	optional string prerequisiteTaskUuid = 6;
	optional string prerequisiteQuestUuid = 7;
}

//------------------------------------------------------------------------------------------

message MinimumUserTaskProto {
     optional string userUuid = 1;
     optional string taskUuid = 2;
     optional int32 numTimesActed = 3;
}

//------------------------------------------------------------------------------------------

message TaskStageMonsterProto {
	optional string monsterUuid = 1;
	optional MonsterType monsterType = 2;
	optional int32 expReward = 3;
	optional int32 cashReward = 4;
	optional bool puzzlePieceDropped = 5;
	optional int32 level = 6;
	
	enum MonsterType {
		REGULAR = 1;
		MINI_BOSS = 2;
		BOSS = 3;
	}
}
